<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainlogin">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/leftshortarrow"
        android:id="@+id/back"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Socially"
        android:id="@+id/sociallytext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/osandemedium"
        android:textColor="@color/mainpagesmd"
        android:textSize="55sp"
        />

    <EditText
        android:id="@+id/usernamefield"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:layout_below="@+id/sociallytext"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/inputfieldbackground"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="13sp"
        android:hint="Username"
        />
    <EditText
        android:id="@+id/passwordfield"
        android:layout_width="330dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/usernamefield"
        android:background="@drawable/rectangle"
        android:paddingLeft="10dp"
        android:textSize="13sp"
        android:backgroundTint="@color/inputfieldbackground"
        android:hint="Password"
        />
    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/mainpagesmd"
        android:layout_below="@id/passwordfield"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:textSize="15sp"

        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginbutton"
        android:backgroundTint="@color/mainpagesmd"
        android:text="Log in"
        android:textSize="15sp"
        android:layout_below="@+id/forgotpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />
    <View
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:background="#33000000"
        android:layout_below="@+id/loginbutton"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="90dp"/>
    <TextView
        android:id="@+id/for_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@color/mainpagefrom"
        android:layout_below="@+id/loginbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />
    <View
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginStart="220dp"
        android:background="#33000000"
        android:layout_below="@+id/loginbutton"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="90dp"/>

    <TextView
        android:id="@+id/donthaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:layout_below="@+id/for_word"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/mainpagefrom"
        />
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up."
        android:textColor="@color/mainpagesmd"
        android:textStyle="bold"
        android:layout_below="@+id/for_word"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/donthaveanaccount"
        android:textSize="13sp"
        android:layout_marginLeft="7dp"
        android:clickable="true"
        />
    <ImageView
        android:id="@+id/brownbottomline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/brownbottomline"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@id/sociallytext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Socially"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/brownbottomline"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/osandemedium"
        android:textColor="@color/mainpagesmd"
        android:textSize="20sp"
        />
    <View
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:background="#33000000"
        android:layout_above="@+id/sociallytext2"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        />






</RelativeLayout>