...
            android:textSize="15sp"
            android:layout_below="@id/profilename"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/switchaccounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Switch accounts"
            android:textColor="@color/mainpagesmd"
            android:layout_below="@id/loginbutton"
            android:layout_centerHorizontal="true"
...
